fix scrollbar on chrome

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -31,16 +31,17 @@
   /* Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
   }
 
   *::-webkit-scrollbar-track {
-    background: var(--primary);
+    background: var(--secondary);
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: var(--secondary);
+    background-color: var(--primary);
     border-radius: 200px;
-    border: 3px solid var(--primary);
+    border: 1px solid var(--secondary);
   }
 }
 
